refactor(company,product): move services to ports & core models