@@ -1,15 +1,9 @@
 package com.diegoabarajas.pruebatecnica.core.application.producto;
 
-import com.diegoabarajas.pruebatecnica.adapters.in.rest.producto.ProductoPrecioRequest;
-import com.diegoabarajas.pruebatecnica.adapters.in.rest.producto.ProductoPrecioResponse;
-import com.diegoabarajas.pruebatecnica.adapters.in.rest.producto.ProductoRequest;
-import com.diegoabarajas.pruebatecnica.adapters.in.rest.producto.ProductoResponse;
-import com.diegoabarajas.pruebatecnica.adapters.out.persistence.empresa.Empresa;
-import com.diegoabarajas.pruebatecnica.adapters.out.persistence.empresa.EmpresaRepository;
-import com.diegoabarajas.pruebatecnica.adapters.out.persistence.producto.Producto;
-import com.diegoabarajas.pruebatecnica.adapters.out.persistence.producto.ProductoPrecio;
-import com.diegoabarajas.pruebatecnica.adapters.out.persistence.producto.ProductoPrecioRepository;
-import com.diegoabarajas.pruebatecnica.adapters.out.persistence.producto.ProductoRepository;
+import com.diegoabarajas.pruebatecnica.core.ports.out.persistence.CompanyRepositoryPort;
+import com.diegoabarajas.pruebatecnica.core.ports.out.persistence.ProductPriceItem;
+import com.diegoabarajas.pruebatecnica.core.ports.out.persistence.ProductPriceRepositoryPort;
+import com.diegoabarajas.pruebatecnica.core.ports.out.persistence.ProductRepositoryPort;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -28,62 +22,52 @@ public class ProductoService {
 
 	private static final Set<String> MONEDAS_PERMITIDAS = Set.of("COP", "USD", "UE");
 
-	private final ProductoRepository productoRepository;
-	private final EmpresaRepository empresaRepository;
-	private final ProductoPrecioRepository productoPrecioRepository;
+	private final ProductRepositoryPort productRepository;
+	private final CompanyRepositoryPort companyRepository;
+	private final ProductPriceRepositoryPort productPriceRepository;
 
 	public ProductoService(
-			ProductoRepository productoRepository,
-			EmpresaRepository empresaRepository,
-			ProductoPrecioRepository productoPrecioRepository
+			ProductRepositoryPort productRepository,
+			CompanyRepositoryPort companyRepository,
+			ProductPriceRepositoryPort productPriceRepository
 	) {
-		this.productoRepository = productoRepository;
-		this.empresaRepository = empresaRepository;
-		this.productoPrecioRepository = productoPrecioRepository;
+		this.productRepository = productRepository;
+		this.companyRepository = companyRepository;
+		this.productPriceRepository = productPriceRepository;
 	}
 
 	@Transactional(readOnly = true)
-	public List<ProductoResponse> list(String empresaNit) {
-		List<Producto> productos = (empresaNit == null || empresaNit.isBlank())
-				? productoRepository.findAll()
-				: productoRepository.findByEmpresa_Nit(empresaNit);
+	public List<ProductWithPrices> list(String empresaNit) {
+		List<Product> productos = (empresaNit == null || empresaNit.isBlank())
+				? productRepository.findAll()
+				: productRepository.findByEmpresaNit(empresaNit);
 
 		if (productos.isEmpty()) return List.of();
 
-		List<String> codigos = productos.stream().map(Producto::getCodigo).toList();
-		Map<String, List<ProductoPrecioResponse>> preciosByCodigo = productoPrecioRepository.findByProducto_CodigoInOrderByIdAsc(codigos).stream()
-				.collect(Collectors.groupingBy(p -> p.getProducto().getCodigo(),
-						Collectors.mapping(ProductoPrecioResponse::fromEntity, Collectors.toList())));
+		List<String> codigos = productos.stream().map(Product::codigo).toList();
+		Map<String, List<ProductPrice>> preciosByCodigo = productPriceRepository.findByProductoCodigos(codigos).stream()
+				.collect(Collectors.groupingBy(ProductPriceItem::productoCodigo,
+						Collectors.mapping(p -> new ProductPrice(p.moneda(), p.precio()), Collectors.toList())));
 
 		return productos.stream()
-				.map(p -> new ProductoResponse(
-						p.getCodigo(),
-						p.getNombre(),
-						p.getCaracteristicas(),
-						p.getEmpresa().getNit(),
-						preciosByCodigo.getOrDefault(p.getCodigo(), List.of())
-				))
+				.map(p -> new ProductWithPrices(p, preciosByCodigo.getOrDefault(p.codigo(), List.of())))
 				.toList();
 	}
 
 	@Transactional
-	public ProductoResponse create(ProductoRequest req) {
-		if (productoRepository.existsById(req.codigo())) {
+	public ProductWithPrices create(CreateProductCommand req) {
+		if (productRepository.existsByCodigo(req.codigo())) {
 			throw new ResponseStatusException(HttpStatus.CONFLICT, "Ya existe un producto con ese código");
 		}
-		Empresa empresa = empresaRepository.findById(req.empresaNit())
-				.orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST, "Empresa no existe: " + req.empresaNit()));
+		if (!companyRepository.existsByNit(req.empresaNit())) {
+			throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Empresa no existe: " + req.empresaNit());
+		}
 
-		Producto p = new Producto();
-		p.setCodigo(req.codigo());
-		p.setNombre(req.nombre());
-		p.setCaracteristicas(req.caracteristicas());
-		p.setEmpresa(empresa);
-		Producto saved = productoRepository.save(p);
+		Product saved = productRepository.save(new Product(req.codigo(), req.nombre(), req.caracteristicas(), req.empresaNit()));
 
-		List<ProductoPrecioRequest> preciosReq = req.precios() == null ? List.of() : req.precios().stream().filter(Objects::nonNull).toList();
-		Map<String, ProductoPrecioRequest> unique = new HashMap<>();
-		for (ProductoPrecioRequest pr : preciosReq) {
+		List<ProductPrice> preciosReq = req.precios() == null ? List.of() : req.precios().stream().filter(Objects::nonNull).toList();
+		Map<String, ProductPrice> unique = new HashMap<>();
+		for (ProductPrice pr : preciosReq) {
 			String moneda = pr.moneda() == null ? "" : pr.moneda().trim().toUpperCase(Locale.ROOT);
 			if (moneda.isBlank()) continue;
 			if (!MONEDAS_PERMITIDAS.contains(moneda)) {
@@ -95,24 +79,11 @@ public class ProductoService {
 			if (unique.containsKey(moneda)) {
 				throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Moneda duplicada: " + moneda);
 			}
-			unique.put(moneda, new ProductoPrecioRequest(moneda, pr.precio()));
+			unique.put(moneda, new ProductPrice(moneda, pr.precio()));
 		}
 
-		List<ProductoPrecioResponse> preciosSaved = unique.values().stream().map(pr -> {
-			ProductoPrecio precio = new ProductoPrecio();
-			precio.setProducto(saved);
-			precio.setMoneda(pr.moneda());
-			precio.setPrecio(pr.precio());
-			return ProductoPrecioResponse.fromEntity(productoPrecioRepository.save(precio));
-		}).toList();
-
-		return new ProductoResponse(
-				saved.getCodigo(),
-				saved.getNombre(),
-				saved.getCaracteristicas(),
-				saved.getEmpresa().getNit(),
-				preciosSaved
-		);
+		List<ProductPrice> preciosSaved = productPriceRepository.saveAll(saved.codigo(), unique.values().stream().toList());
+		return new ProductWithPrices(saved, preciosSaved);
 	}
 }
 
